configs/firewall/iptables.rules
# Generated by iptables-save v1.8.7 on Wed Aug 26 15:46:50 2026
*raw
:PREROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A PREROUTING -d 172.18.0.3/32 ! -i br-9305cb2c4302 -j DROP
-A PREROUTING -d 172.18.0.4/32 ! -i br-9305cb2c4302 -j DROP
COMMIT
# Completed on Wed Aug 26 15:46:50 2026
# Generated by iptables-save v1.8.7 on Wed Aug 26 15:46:50 2026
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [9105:611744]
:DOCKER - [0:0]
:DOCKER-BRIDGE - [0:0]
:DOCKER-CT - [0:0]
:DOCKER-FORWARD - [0:0]
:DOCKER-INTERNAL - [0:0]
:DOCKER-USER - [0:0]
:InstanceServices - [0:0]
:f2b-sshd - [0:0]
:ufw-after-forward - [0:0]
:ufw-after-input - [0:0]
:ufw-after-logging-forward - [0:0]
:ufw-after-logging-input - [0:0]
:ufw-after-logging-output - [0:0]
:ufw-after-output - [0:0]
:ufw-before-forward - [0:0]
:ufw-before-input - [0:0]
:ufw-before-logging-forward - [0:0]
:ufw-before-logging-input - [0:0]
:ufw-before-logging-output - [0:0]
:ufw-before-output - [0:0]
:ufw-logging-allow - [0:0]
:ufw-logging-deny - [0:0]
:ufw-not-local - [0:0]
:ufw-reject-forward - [0:0]
:ufw-reject-input - [0:0]
:ufw-reject-output - [0:0]
:ufw-skip-to-policy-forward - [0:0]
:ufw-skip-to-policy-input - [0:0]
:ufw-skip-to-policy-output - [0:0]
:ufw-track-forward - [0:0]
:ufw-track-input - [0:0]
:ufw-track-output - [0:0]
:ufw-user-forward - [0:0]
:ufw-user-input - [0:0]
:ufw-user-limit - [0:0]
:ufw-user-limit-accept - [0:0]
:ufw-user-logging-forward - [0:0]
:ufw-user-logging-input - [0:0]
:ufw-user-logging-output - [0:0]
:ufw-user-output - [0:0]
-A INPUT -p tcp -m multiport --dports 22 -j f2b-sshd
-A INPUT -j ufw-before-logging-input
-A INPUT -j ufw-before-input
-A INPUT -j ufw-after-input
-A INPUT -j ufw-after-logging-input
-A INPUT -j ufw-reject-input
-A INPUT -j ufw-track-input
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 10000 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A INPUT -j ufw-before-logging-input
-A INPUT -j ufw-before-input
-A INPUT -j ufw-after-input
-A INPUT -j ufw-after-logging-input
-A INPUT -j ufw-reject-input
-A INPUT -j ufw-track-input
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-FORWARD
-A FORWARD -j ufw-before-logging-forward
-A FORWARD -j ufw-before-forward
-A FORWARD -j ufw-after-forward
-A FORWARD -j ufw-after-logging-forward
-A FORWARD -j ufw-reject-forward
-A FORWARD -j ufw-track-forward
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j ufw-before-logging-forward
-A FORWARD -j ufw-before-forward
-A FORWARD -j ufw-after-forward
-A FORWARD -j ufw-after-logging-forward
-A FORWARD -j ufw-reject-forward
-A FORWARD -j ufw-track-forward
-A OUTPUT -j ufw-before-logging-output
-A OUTPUT -j ufw-before-output
-A OUTPUT -j ufw-after-output
-A OUTPUT -j ufw-after-logging-output
-A OUTPUT -j ufw-reject-output
-A OUTPUT -j ufw-track-output
-A OUTPUT -d 169.254.0.0/16 -j InstanceServices
-A OUTPUT -j ufw-before-logging-output
-A OUTPUT -j ufw-before-output
-A OUTPUT -j ufw-after-output
-A OUTPUT -j ufw-after-logging-output
-A OUTPUT -j ufw-reject-output
-A OUTPUT -j ufw-track-output
-A DOCKER -d 172.18.0.4/32 ! -i br-9305cb2c4302 -o br-9305cb2c4302 -p tcp -m tcp --dport 27017 -j ACCEPT
-A DOCKER -d 172.18.0.3/32 ! -i br-9305cb2c4302 -o br-9305cb2c4302 -p tcp -m tcp --dport 8000 -j ACCEPT
-A DOCKER ! -i br-9305cb2c4302 -o br-9305cb2c4302 -j DROP
-A DOCKER ! -i docker0 -o docker0 -j DROP
-A DOCKER ! -i br-5a129664ca40 -o br-5a129664ca40 -j DROP
-A DOCKER-BRIDGE -o br-9305cb2c4302 -j DOCKER
-A DOCKER-BRIDGE -o docker0 -j DOCKER
-A DOCKER-BRIDGE -o br-5a129664ca40 -j DOCKER
-A DOCKER-CT -o br-9305cb2c4302 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-CT -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-CT -o br-5a129664ca40 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-FORWARD -j DOCKER-CT
-A DOCKER-FORWARD -j DOCKER-INTERNAL
-A DOCKER-FORWARD -j DOCKER-BRIDGE
-A DOCKER-FORWARD -i br-9305cb2c4302 -j ACCEPT
-A DOCKER-FORWARD -i docker0 -j ACCEPT
-A DOCKER-FORWARD -i br-5a129664ca40 -j ACCEPT
-A InstanceServices -d 169.254.0.2/32 -p tcp -m owner --uid-owner 0 -m tcp --dport 3260 -m comment --comment "See the Oracle-Provided Images section in the Oracle Cloud Infrastructure documentation for security impact of modifying or removing this rule" -j ACCEPT
-A InstanceServices -d 169.254.2.0/24 -p tcp -m owner --uid-owner 0 -m tcp --dport 3260 -m comment --comment "See the Oracle-Provided Images section in the Oracle Cloud Infrastructure documentation for security impact of modifying or removing this rule" -j ACCEPT
-A InstanceServices -d 169.254.4.0/24 -p tcp -m owner --uid-owner 0 -m tcp --dport 3260 -m comment --comment "See the Oracle-Provided Images section in the Oracle Cloud Infrastructure documentation for security impact of modifying or removing this rule" -j ACCEPT
-A InstanceServices -d 169.254.5.0/24 -p tcp -m owner --uid-owner 0 -m tcp --dport 3260 -m comment --comment "See the Oracle-Provided Images section in the Oracle Cloud Infrastructure documentation for security impact of modifying or removing this rule" -j ACCEPT
-A InstanceServices -d 169.254.0.2/32 -p tcp -m tcp --dport 80 -m comment --comment "See the Oracle-Provided Images section in the Oracle Cloud Infrastructure documentation for security impact of modifying or removing this rule" -j ACCEPT
-A InstanceServices -d 169.254.169.254/32 -p udp -m udp --dport 53 -m comment --comment "See the Oracle-Provided Images section in the Oracle Cloud Infrastructure documentation for security impact of modifying or removing this rule" -j ACCEPT
-A InstanceServices -d 169.254.169.254/32 -p tcp -m tcp --dport 53 -m comment --comment "See the Oracle-Provided Images section in the Oracle Cloud Infrastructure documentation for security impact of modifying or removing this rule" -j ACCEPT
-A InstanceServices -d 169.254.0.3/32 -p tcp -m owner --uid-owner 0 -m tcp --dport 80 -m comment --comment "See the Oracle-Provided Images section in the Oracle Cloud Infrastructure documentation for security impact of modifying or removing this rule" -j ACCEPT
-A InstanceServices -d 169.254.0.4/32 -p tcp -m tcp --dport 80 -m comment --comment "See the Oracle-Provided Images section in the Oracle Cloud Infrastructure documentation for security impact of modifying or removing this rule" -j ACCEPT
-A InstanceServices -d 169.254.169.254/32 -p tcp -m tcp --dport 80 -m comment --comment "See the Oracle-Provided Images section in the Oracle Cloud Infrastructure documentation for security impact of modifying or removing this rule" -j ACCEPT
-A InstanceServices -d 169.254.169.254/32 -p udp -m udp --dport 67 -m comment --comment "See the Oracle-Provided Images section in the Oracle Cloud Infrastructure documentation for security impact of modifying or removing this rule" -j ACCEPT
-A InstanceServices -d 169.254.169.254/32 -p udp -m udp --dport 69 -m comment --comment "See the Oracle-Provided Images section in the Oracle Cloud Infrastructure documentation for security impact of modifying or removing this rule" -j ACCEPT
-A InstanceServices -d 169.254.169.254/32 -p udp -m udp --dport 123 -m comment --comment "See the Oracle-Provided Images section in the Oracle Cloud Infrastructure documentation for security impact of modifying or removing this rule" -j ACCEPT
-A InstanceServices -d 169.254.0.0/16 -p tcp -m tcp -m comment --comment "See the Oracle-Provided Images section in the Oracle Cloud Infrastructure documentation for security impact of modifying or removing this rule" -j REJECT --reject-with tcp-reset
-A InstanceServices -d 169.254.0.0/16 -p udp -m udp -m comment --comment "See the Oracle-Provided Images section in the Oracle Cloud Infrastructure documentation for security impact of modifying or removing this rule" -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 45.4.179.4/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 84.74.163.210/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 116.177.172.64/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 136.248.242.166/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 117.187.180.162/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 45.232.73.84/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 222.71.205.34/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.26.136.173/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.229.125.91/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 116.177.172.94/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 118.145.107.219/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 78.109.200.147/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 116.110.158.67/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 45.135.194.26/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 220.247.224.226/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 117.50.192.5/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 89.167.11.181/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 139.59.208.49/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.176.20.115/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 85.198.19.242/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 122.177.247.38/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 152.32.171.213/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 81.192.46.36/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.82.21.8/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 35.188.112.111/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 222.220.102.32/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 202.152.201.166/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 119.41.148.202/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 45.95.0.139/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 189.151.34.14/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.254.172.165/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 116.99.168.171/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 223.221.38.226/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 42.51.37.71/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 192.236.128.200/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 178.251.140.3/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 49.204.74.149/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 34.175.118.185/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 34.78.29.97/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 154.127.68.65/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 216.155.93.75/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 121.184.144.232/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 65.109.178.234/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 220.205.123.19/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 101.100.194.181/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 49.207.40.162/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 171.231.191.234/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 171.243.149.121/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.187.147.0/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 89.169.10.149/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 116.99.169.218/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 171.231.177.118/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 27.79.5.4/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 171.243.149.76/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 118.193.40.61/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 181.123.136.11/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 201.217.12.57/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 60.214.154.254/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 104.234.138.60/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 159.203.83.195/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 101.42.158.179/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 172.174.17.234/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 61.72.55.130/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 102.91.123.220/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 116.110.9.161/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 171.231.178.70/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 66.116.243.149/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 171.231.184.131/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 116.110.6.130/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 45.226.133.211/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 197.243.14.52/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 36.141.79.94/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 185.167.60.124/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 193.32.162.27/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 169.58.119.231/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 190.60.43.27/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 107.155.15.8/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 39.171.240.69/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 185.225.41.192/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 72.253.251.7/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.168.135.187/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 119.18.52.5/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 4.224.40.94/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 77.239.124.108/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 202.51.214.99/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 180.76.105.165/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 189.167.213.64/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 72.240.125.133/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.90.227.203/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 91.134.133.184/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.172.20.218/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 202.152.148.27/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 31.76.47.69/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 211.253.31.30/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 193.32.162.15/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 180.73.206.36/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 116.110.221.40/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 23.88.47.15/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 116.110.158.190/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 116.110.219.159/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 78.134.49.171/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 43.245.248.2/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 211.106.133.202/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 94.103.3.108/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 4.239.243.30/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 115.190.126.68/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 161.132.54.218/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 171.220.244.134/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 84.201.243.44/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.189.234.96/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 211.240.117.75/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 94.20.62.126/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 20.40.44.6/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 59.36.211.132/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 193.141.65.199/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 191.34.222.174/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 135.125.199.17/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 116.177.172.108/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 161.49.89.39/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 43.135.149.69/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 134.122.93.100/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 91.77.160.69/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 121.183.240.55/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.193.179.139/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 141.148.155.223/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 182.171.90.17/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 203.189.195.8/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 166.62.41.13/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 115.68.208.117/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 14.155.236.203/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 42.96.19.37/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 62.234.38.103/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 2.26.53.142/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 115.91.48.142/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 82.156.115.138/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 186.96.158.180/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 165.22.254.150/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 186.47.77.39/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 111.9.47.89/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 221.234.36.123/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.191.14.243/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 94.72.118.42/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 197.5.145.114/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 175.198.62.180/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 160.22.106.87/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 107.161.92.20/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 118.193.45.65/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 34.88.29.206/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 171.231.188.78/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 156.155.253.31/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 116.110.148.41/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 171.231.189.174/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 1.255.171.167/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 221.229.218.50/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 36.150.236.72/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 62.238.5.68/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 4.206.92.183/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 160.25.89.96/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 27.155.103.100/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 27.79.3.148/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 101.126.53.14/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 31.77.227.120/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 144.225.6.182/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 180.76.98.88/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.165.206.238/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 43.138.204.175/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 202.51.214.98/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 202.79.29.108/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 171.231.183.72/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 27.79.47.115/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 14.103.118.61/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 137.74.114.131/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 51.195.40.26/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 181.28.101.14/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 45.195.159.28/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 198.23.244.142/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 43.155.134.4/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 115.190.192.114/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 37.187.236.33/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 157.10.100.12/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 138.197.195.44/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 181.191.66.162/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 49.72.212.22/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 181.116.220.27/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 107.150.105.10/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 171.25.158.80/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 181.191.65.117/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 178.27.90.142/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 27.79.41.76/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 171.231.191.67/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 220.86.7.26/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 20.124.84.235/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 20.55.45.217/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 192.169.201.223/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 195.161.41.69/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 186.251.71.202/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 150.5.141.198/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 167.233.211.213/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 81.192.46.45/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 180.108.64.6/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 52.237.80.79/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 77.239.124.102/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 42.240.164.208/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 69.49.246.176/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.229.125.106/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 114.80.32.225/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 83.219.249.173/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 143.105.99.158/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 155.4.218.159/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 66.116.225.71/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 14.103.117.81/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 20.204.3.211/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 14.46.87.209/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 64.225.17.153/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 163.7.1.156/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 43.165.177.143/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 184.169.47.194/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 43.246.198.121/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 182.71.135.110/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 115.187.33.194/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 43.156.115.178/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 143.110.241.64/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 35.228.124.187/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.157.79.1/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 87.106.63.76/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 138.197.164.175/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 220.118.173.234/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 116.110.211.114/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 178.128.198.12/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 157.20.37.254/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 117.34.125.173/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 157.230.237.75/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 43.134.96.20/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 58.242.118.12/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 152.32.254.89/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 104.28.233.73/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 43.155.21.198/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 69.5.20.133/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 152.32.254.222/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 114.111.54.189/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 101.79.165.43/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 150.5.154.160/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 43.165.170.198/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 114.111.53.214/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 45.148.10.183/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.146.159.173/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 180.106.80.16/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 170.246.77.74/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 20.48.41.224/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 4.182.219.135/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 20.229.185.186/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.90.225.155/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 58.229.253.119/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 201.71.192.108/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 196.196.150.5/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 202.165.26.42/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 182.43.235.75/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 122.168.194.41/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 139.255.2.146/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 210.114.22.126/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 45.195.221.26/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 116.99.169.249/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 116.99.172.91/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 144.48.243.18/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 107.174.174.17/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 41.204.63.118/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 36.137.249.148/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.63.108.25/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 143.20.97.135/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 85.240.193.104/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 182.253.221.210/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 121.227.152.171/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 173.244.60.241/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 185.80.128.227/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 121.227.31.13/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 165.227.13.4/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.89.136.111/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 112.151.168.52/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 152.32.239.90/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 131.161.249.165/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 5.144.179.246/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.164.57.37/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.157.149.14/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 194.164.193.57/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 97.74.236.4/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 57.129.74.123/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.163.97.211/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 54.38.241.200/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 171.243.150.32/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 171.243.150.213/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 218.17.176.80/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 92.62.233.214/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 111.235.76.92/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 182.44.116.87/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 198.98.62.211/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 222.232.176.7/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 52.176.211.73/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 159.223.93.39/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 14.103.118.198/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 59.22.201.143/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 101.36.110.41/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 116.110.159.179/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 171.231.176.42/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 183.82.111.224/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 109.122.195.150/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.255.200.90/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 197.248.207.139/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 146.59.32.16/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 116.99.49.208/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 117.62.203.160/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.48.192.48/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 172.211.56.214/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.240.4.72/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 207.154.230.149/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 116.110.8.176/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 116.99.171.175/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 171.231.185.122/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 4.246.117.137/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.200.20.41/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 101.42.41.164/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 209.38.121.186/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.189.208.13/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 94.249.151.147/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 193.233.48.169/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 107.150.105.153/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 119.156.194.77/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 182.43.235.218/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 171.25.158.87/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 42.200.66.164/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 192.3.251.33/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 159.65.166.11/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 69.6.222.101/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 82.165.63.32/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 200.155.66.2/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 171.231.184.215/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 27.79.47.77/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 195.250.169.2/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 73.36.177.174/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 153.66.28.132/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 163.227.52.50/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 186.209.52.199/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 178.175.167.40/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 20.215.251.225/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 139.59.80.46/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 194.8.156.125/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 112.120.171.95/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 135.125.190.72/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 116.71.136.125/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 37.110.113.113/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 154.18.197.35/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 137.184.157.186/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 211.106.137.135/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 165.154.227.158/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 150.241.113.163/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 117.50.46.117/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 193.32.162.42/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 14.103.123.67/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 168.144.120.7/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 195.178.110.218/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 106.243.155.71/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 199.195.254.215/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 159.65.223.164/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 94.41.141.36/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 5.181.219.66/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 117.50.44.85/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 185.228.81.152/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 196.189.155.89/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 171.25.158.74/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 94.183.177.21/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 110.166.87.119/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 4.224.61.94/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 82.97.253.89/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 125.21.59.218/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 167.172.159.40/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 49.205.151.233/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 94.183.187.22/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 219.78.63.235/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 161.118.212.147/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 171.61.22.38/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 191.32.245.243/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 61.4.102.113/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 102.211.152.138/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.60.242.169/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 203.192.227.20/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 188.245.172.7/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 200.37.103.36/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.59.163.133/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.155.221.74/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 196.196.150.124/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 51.91.96.79/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 88.147.30.59/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 187.51.208.158/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 202.155.14.71/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 118.145.144.95/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 101.32.240.31/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 154.65.30.24/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 81.193.216.17/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 35.207.202.141/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 27.79.4.229/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 116.99.171.102/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 171.231.192.175/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.243.26.174/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 121.142.87.218/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 210.79.142.230/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 219.145.32.240/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 135.235.138.43/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.152.165.164/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 37.202.233.50/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 152.42.245.220/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 114.35.59.237/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 135.125.235.107/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 39.117.79.36/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.154.63.62/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 165.232.164.223/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 78.44.192.210/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 171.231.190.24/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 116.110.156.139/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 171.231.189.132/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 146.190.154.85/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 186.153.121.14/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 69.6.234.27/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 211.20.14.156/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 65.254.95.159/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.86.198.253/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 51.75.64.35/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 59.36.78.66/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 183.239.25.115/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 36.212.31.122/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 172.191.178.196/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 62.169.26.200/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 78.138.168.46/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 2.27.42.28/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.114.147.217/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 157.230.239.134/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 192.3.176.32/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 57.128.225.99/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 118.193.45.134/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 179.51.153.37/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 118.32.101.175/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 58.210.182.18/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 70.153.145.230/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 116.110.209.234/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 171.231.183.213/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 82.29.129.87/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 167.86.102.199/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 89.252.135.113/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 2.26.7.133/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 177.155.133.175/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 152.53.185.81/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 139.185.55.154/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 117.50.211.254/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 194.190.153.226/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 172.172.170.199/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 91.231.219.137/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.98.176.164/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 5.182.83.231/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 20.210.194.124/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 111.29.38.32/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 114.218.57.21/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 51.91.97.236/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 58.186.20.101/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 181.115.171.107/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 107.175.230.158/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 117.187.180.166/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 104.143.77.9/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.219.32.239/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 171.231.183.225/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 27.79.6.221/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 116.110.145.165/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 171.25.158.82/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 51.75.247.232/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 5.188.16.97/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 172.208.48.177/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 69.74.29.21/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 71.27.86.44/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 45.42.215.69/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 34.100.248.63/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.84.236.242/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 159.65.5.51/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 171.25.158.57/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 217.154.165.93/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 209.141.41.212/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 154.83.15.101/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 189.190.217.141/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 2.59.163.225/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 181.188.148.74/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 14.103.112.5/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 172.191.157.64/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 171.61.21.186/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 179.62.216.38/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 58.222.244.226/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 115.178.75.242/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 155.94.155.147/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 106.12.69.68/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 20.192.5.254/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 104.244.74.84/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 61.76.112.4/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 36.89.252.58/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 101.32.243.200/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 203.83.234.180/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 218.78.60.105/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 72.253.251.3/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 45.55.189.219/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 212.3.155.8/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 118.194.249.186/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 88.142.46.185/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 45.94.68.69/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 221.229.220.180/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 14.103.116.87/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 197.227.8.186/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 95.90.13.168/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 118.193.77.13/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 151.252.84.225/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 185.39.204.145/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 61.222.211.114/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 87.106.65.126/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 104.168.48.57/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 42.96.20.16/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 198.12.107.158/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 132.243.222.137/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 23.29.118.224/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.124.93.232/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 196.92.7.247/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 196.92.7.249/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.208.219.38/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 192.236.214.139/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.85.85.175/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 116.110.154.128/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 116.99.172.125/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 116.110.210.126/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 116.99.169.204/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.189.234.9/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 74.208.97.123/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 157.7.133.168/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 9.223.176.221/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.75.183.177/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 185.153.231.44/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 36.103.243.179/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 93.197.111.26/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 31.59.175.12/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 106.243.87.164/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 218.51.148.194/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 203.192.232.180/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 20.228.193.165/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 186.68.83.104/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 96.78.175.41/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 171.231.178.241/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 116.110.144.144/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 84.1.34.96/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 120.48.80.70/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 152.32.172.177/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 60.52.195.251/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 20.116.34.103/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 196.188.116.56/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 139.255.254.163/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 59.36.75.227/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 46.101.180.162/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 211.211.208.113/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 137.255.13.19/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.176.64.36/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 114.141.59.195/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 189.147.193.166/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 118.26.39.129/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 104.199.176.250/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 187.158.51.199/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 116.110.21.50/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 116.110.20.59/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 116.110.209.255/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 116.110.22.100/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 143.105.99.1/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 5.253.59.68/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 14.63.217.28/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 101.47.159.50/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 202.103.55.158/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 135.13.11.134/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 137.255.13.201/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 65.254.93.170/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 106.51.92.114/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 177.85.247.230/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 186.13.24.118/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 210.245.20.230/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 112.216.108.62/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.134.154.138/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 51.75.161.33/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 113.193.128.226/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 94.184.17.103/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 85.216.81.75/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 129.121.114.225/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 14.98.67.210/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 182.73.176.186/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 50.62.22.47/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.190.92.165/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 116.110.156.170/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 155.4.244.169/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 116.110.9.232/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 198.12.107.100/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 152.89.12.101/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 189.194.140.170/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 77.110.107.153/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 41.242.115.83/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 43.157.163.155/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 180.106.83.59/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 177.43.83.43/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 60.199.224.2/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 111.238.174.6/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 101.126.143.152/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 75.112.23.30/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 43.157.248.241/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 216.126.225.6/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 82.200.240.33/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 12.156.67.18/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 213.186.255.54/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 128.14.225.164/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 170.0.62.246/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 120.48.175.69/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 172.245.33.174/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 105.28.108.165/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 137.255.13.181/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 27.79.2.68/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 171.243.150.132/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 116.110.219.40/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 69.73.187.130/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 2.134.15.12/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 31.76.11.83/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 209.99.185.195/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 45.148.101.101/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 185.217.131.25/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 51.68.151.167/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.189.235.114/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 190.99.147.221/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 36.139.161.140/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 134.209.120.216/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 165.22.205.91/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 146.190.234.9/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 180.138.194.82/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.191.14.210/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 94.159.108.238/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 124.251.110.186/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 77.239.126.9/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 165.154.202.254/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 15.204.8.16/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 39.115.195.164/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 213.91.234.180/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 43.156.115.92/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 42.51.33.162/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 34.135.200.178/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 183.36.126.68/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 121.229.25.10/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.195.238.118/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 222.107.156.227/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 14.103.118.212/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.190.92.164/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 173.249.35.161/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.75.183.43/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 122.35.192.33/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 171.231.196.169/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 27.79.0.134/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 182.66.193.212/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 162.19.250.18/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 154.83.16.14/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 168.144.134.137/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 165.101.250.39/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 76.79.213.70/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.4.145.50/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 36.140.123.73/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 36.41.173.197/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 95.165.77.31/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 38.191.248.41/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 149.202.50.58/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 106.12.17.217/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 203.150.169.85/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 118.39.219.45/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 180.168.24.186/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 101.126.64.76/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 45.144.233.56/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 116.110.23.104/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 116.110.23.68/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 116.99.174.162/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 124.193.81.23/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 116.110.22.138/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 116.99.169.172/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 34.159.18.221/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 125.91.33.72/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 138.99.79.29/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 49.49.230.106/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 157.15.67.253/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 45.33.102.61/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 180.76.184.79/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 139.59.18.80/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 189.90.55.243/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 122.52.196.243/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 197.156.83.94/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 165.154.235.9/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 171.25.158.24/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 45.78.201.248/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.143.231.2/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 128.1.38.105/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 107.174.39.49/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 43.156.71.43/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 45.78.230.231/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 152.32.252.65/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 189.217.130.86/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 203.116.129.55/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 139.198.113.29/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.143.10.140/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 101.47.156.21/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 43.128.111.31/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 163.7.5.228/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 43.134.49.202/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 113.20.2.100/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 152.32.154.44/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 152.32.218.244/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.144.245.123/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 203.88.121.4/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 58.152.42.225/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 45.78.206.111/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 163.7.11.155/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 163.7.8.79/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 165.154.205.128/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 186.120.179.222/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 45.78.194.186/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 165.154.225.47/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 163.7.11.126/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 163.7.9.84/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 150.5.157.20/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 163.7.9.55/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 15.235.192.186/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 163.7.6.41/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 152.32.155.14/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 43.133.61.254/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 223.17.1.118/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 163.7.4.169/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 163.7.6.74/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 43.166.168.6/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 101.47.155.9/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 165.154.236.29/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 163.7.13.17/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 101.47.158.56/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 49.51.188.155/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 209.141.43.146/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 163.7.5.147/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 101.47.156.170/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 43.154.195.142/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 43.163.90.141/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 49.51.199.112/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 101.32.170.173/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 43.157.200.91/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 69.5.7.218/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 174.35.25.181/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 163.7.3.154/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 101.47.14.46/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 94.132.0.254/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 89.126.222.149/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.183.62.3/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 80.208.57.19/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 182.43.221.112/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 115.191.33.55/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 202.145.0.61/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 4.247.209.15/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 129.121.123.80/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 45.120.216.232/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 185.86.145.206/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 217.76.48.134/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 82.38.134.4/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 139.59.146.150/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 2.27.42.152/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 185.193.240.246/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 115.190.158.196/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 117.50.73.90/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 164.90.152.103/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 115.187.45.20/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 52.172.177.191/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 209.99.184.143/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 45.172.152.74/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 144.225.8.54/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 144.6.29.27/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 187.111.28.131/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 117.193.74.14/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 34.123.134.194/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 51.83.58.173/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 150.5.169.176/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 27.79.44.188/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 171.231.196.238/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 14.177.234.24/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 51.178.84.57/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 130.131.220.95/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 20.89.68.9/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 101.126.11.137/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.103.245.61/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 102.210.148.92/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.172.236.241/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 217.182.253.249/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 143.202.209.172/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 66.116.242.235/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 154.92.23.249/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 120.48.15.138/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 69.5.20.205/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 111.32.153.180/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 1.214.214.114/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 202.70.78.237/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 119.156.28.157/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.187.146.107/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 20.157.117.15/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 111.68.98.152/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 138.124.30.187/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 120.87.99.202/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 27.79.40.150/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 171.231.190.73/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 141.94.19.216/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 148.72.64.140/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 34.58.124.191/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 211.251.245.88/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 92.205.177.212/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 137.184.204.46/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 101.50.83.146/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 218.4.91.162/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 171.25.158.47/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 181.228.67.146/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.233.206.154/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 120.48.90.166/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 138.197.204.198/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.91.120.219/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 172.174.245.26/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 35.187.231.181/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 179.57.170.71/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 189.203.163.10/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 20.160.86.7/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 61.240.156.16/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 154.221.24.224/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.148.100.146/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 45.194.3.128/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 76.81.71.226/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 172.190.100.10/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 89.134.194.9/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 195.201.169.60/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 121.229.98.120/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 43.133.140.5/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 49.64.169.153/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 190.223.60.209/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 1.238.106.229/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 43.165.178.246/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.99.214.211/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 223.233.83.26/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 104.223.38.33/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 177.53.247.76/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.25.47.94/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 41.74.4.188/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 200.192.97.179/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 42.51.13.91/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 186.232.110.92/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 114.34.106.146/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 37.187.244.59/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 211.240.117.71/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 49.75.185.71/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 157.230.18.133/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 186.248.197.77/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 40.112.183.29/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 139.28.221.238/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 108.174.156.122/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 171.231.190.250/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 5.99.196.202/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 112.217.188.122/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 171.231.194.118/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 171.243.151.143/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 83.224.137.201/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 180.76.99.94/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 104.218.166.62/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 187.85.188.216/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 97.74.87.119/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 218.190.8.165/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 223.123.65.97/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 88.205.172.170/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 119.209.12.20/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 45.117.177.47/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 123.58.213.128/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 157.230.19.220/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 171.25.158.50/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.207.9.246/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 185.143.197.45/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 161.35.71.29/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 115.190.166.122/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 175.119.225.68/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 27.79.41.116/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 51.254.113.225/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.200.25.198/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 20.41.117.16/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 171.244.201.80/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 182.52.90.106/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 193.168.196.14/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 50.6.228.32/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.179.198.19/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 182.118.64.225/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 101.36.107.233/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 34.40.145.110/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 116.110.7.45/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 116.110.214.67/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 116.110.9.177/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 116.110.9.9/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 193.32.162.34/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 171.244.143.209/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 74.87.117.150/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 69.5.23.222/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 107.173.67.202/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 111.47.243.219/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 113.193.234.210/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 141.224.218.101/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 195.86.192.66/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 38.132.122.177/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.140.249.210/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 165.73.201.216/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 36.138.252.97/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 195.178.191.5/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 23.94.112.16/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 188.95.70.227/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 95.255.158.96/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 101.96.203.52/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 186.10.86.130/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 54.37.235.85/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 36.92.140.209/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 34.63.42.56/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 41.93.28.23/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 123.58.210.86/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 194.5.176.86/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 118.145.238.115/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 107.172.199.26/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 51.210.42.246/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.161.113.136/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 43.165.62.10/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 92.27.157.252/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.187.146.253/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 79.104.0.82/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 152.32.189.236/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 217.154.42.110/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 41.204.82.238/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 172.174.5.146/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 87.115.187.196/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 194.191.26.234/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 60.250.246.239/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.97.101.25/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 20.255.61.0/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 165.22.190.47/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 137.184.89.187/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 155.4.244.179/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 36.37.73.242/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 40.83.182.122/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 139.59.232.169/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 201.249.205.94/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 162.240.222.44/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 177.53.215.134/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 51.161.8.211/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 113.172.116.53/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 211.253.9.49/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 61.28.144.154/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 115.191.22.87/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 83.171.89.209/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 122.162.148.8/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 54.38.109.115/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 213.230.111.14/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 182.18.139.237/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 116.109.216.74/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 129.151.191.139/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 165.22.49.138/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 83.235.16.111/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 27.79.4.201/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 171.243.150.251/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 58.69.56.44/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 200.39.46.41/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 220.88.220.59/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 201.45.248.210/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 200.105.172.184/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 51.195.149.120/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 80.15.193.156/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 40.121.200.75/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 201.222.20.20/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 111.160.133.62/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 202.59.200.27/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 137.184.57.162/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 186.148.224.83/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 27.79.2.156/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 87.106.44.172/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.30.195.72/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 165.154.236.104/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 43.165.190.208/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.187.146.72/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 135.125.226.143/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 4.246.61.185/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 72.17.34.38/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 185.174.69.47/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 177.7.183.152/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 80.102.218.207/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 216.245.184.100/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 20.229.115.183/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 157.245.87.146/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.30.40.129/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 94.180.129.35/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 118.194.234.8/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 54.38.52.18/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 13.70.25.162/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 167.172.40.222/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 59.179.31.237/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 191.205.210.9/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 185.227.152.135/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 45.134.9.27/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 34.81.36.168/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 192.129.135.51/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 92.4.143.236/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 20.13.164.162/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 181.164.12.188/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 187.154.144.166/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 40.82.214.8/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 115.190.174.127/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 27.79.7.145/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 171.231.190.144/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 171.231.189.187/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 14.103.64.177/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 171.244.141.86/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 185.170.144.198/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 185.79.139.16/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 134.209.103.135/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 179.48.248.245/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 156.245.246.50/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 171.104.143.176/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 122.162.145.93/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 46.24.47.94/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 206.214.217.154/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 14.225.218.99/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 163.7.6.114/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 114.130.85.36/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 31.77.131.189/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 114.156.131.158/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 45.78.194.242/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 150.5.169.138/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 187.110.238.50/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 170.64.133.217/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 147.182.169.191/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.38.219.22/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 143.105.99.156/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 76.79.213.69/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 213.215.209.101/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 194.163.145.41/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 182.18.161.165/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 202.165.15.132/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 120.52.18.116/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 49.0.24.107/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 152.32.218.149/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 66.116.224.33/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 78.39.209.90/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 114.220.176.69/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.147.159.91/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.143.231.24/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 92.27.101.99/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 154.221.35.72/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 115.178.75.243/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 116.110.213.20/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 116.110.145.128/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 157.10.182.14/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 43.160.207.32/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 45.121.25.115/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 4.227.177.11/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 27.128.171.39/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 58.33.97.119/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 45.148.10.240/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 46.101.201.146/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 165.154.147.69/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 106.251.244.178/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 210.212.136.3/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 217.217.254.115/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 65.109.183.25/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 35.237.94.18/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 154.70.102.114/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 160.174.129.232/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 119.17.139.15/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.166.10.244/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 185.60.136.87/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 4.194.19.2/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 122.13.25.186/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 186.115.57.171/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 182.93.7.194/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 136.248.247.188/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.20.122.54/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 70.120.203.193/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 159.112.138.47/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 81.211.72.167/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 43.130.90.166/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 184.168.21.211/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 219.150.93.157/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 203.21.120.126/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 218.157.179.170/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 107.173.241.217/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 191.101.59.16/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 219.152.229.165/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 74.94.234.151/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 160.22.170.38/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 41.216.178.119/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 96.78.175.36/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 180.76.170.111/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 185.164.81.156/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 146.190.209.45/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 119.246.15.94/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 117.50.51.198/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 170.64.151.211/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 182.44.72.56/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 79.72.57.232/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 181.129.41.162/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 117.62.22.127/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 14.29.240.154/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 27.128.240.75/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 192.210.192.220/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 112.53.123.177/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.167.88.166/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 151.217.4.34/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 74.208.192.176/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 198.57.162.173/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 58.220.39.200/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 50.6.228.111/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 52.224.109.126/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 14.103.107.209/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 177.30.64.65/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.213.238.91/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 149.78.8.0/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 140.246.137.102/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 66.23.162.13/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 212.192.14.81/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.43.191.43/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 180.184.51.110/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 176.31.21.38/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 165.22.225.218/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 218.78.46.81/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 20.244.20.183/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 106.119.165.171/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 189.113.47.155/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 183.208.50.216/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 5.89.75.194/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.154.62.14/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 36.64.131.68/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 178.209.97.14/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 161.248.202.88/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 143.110.247.221/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 4.184.246.230/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 106.13.122.214/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 106.124.137.21/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 46.101.235.18/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 152.32.182.41/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 196.196.150.99/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 116.181.16.142/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 14.103.84.166/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 20.153.204.5/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 152.32.205.153/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 171.231.191.213/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 171.231.183.200/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 27.79.7.150/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.69.96.120/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 152.32.186.39/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 178.128.51.84/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.84.236.222/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 128.0.140.130/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 109.199.118.219/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 152.32.220.188/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.167.89.222/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 80.14.245.65/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 179.40.112.10/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 196.196.150.4/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 40.81.194.185/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 116.228.233.93/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 119.203.231.121/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 62.109.11.175/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 125.122.156.136/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 27.79.42.201/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 27.79.1.161/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 31.7.66.163/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.19.196.230/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 187.212.1.182/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 14.225.206.187/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 191.26.95.2/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 201.76.120.30/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 14.102.230.4/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 196.189.116.182/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 1.222.42.237/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 172.233.190.182/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 94.244.77.5/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 101.47.159.125/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.155.47.50/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 41.208.147.131/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 200.77.172.159/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 103.240.109.194/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 102.88.137.80/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 101.96.212.81/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 154.83.196.237/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 115.246.52.219/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 116.110.17.197/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 116.110.10.92/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 171.244.37.97/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 122.168.123.73/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 49.231.192.36/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 98.70.48.241/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 112.137.143.2/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 37.143.61.84/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 95.98.62.78/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 223.233.80.114/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 20.56.146.118/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 165.154.6.75/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 35.246.80.146/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 34.124.225.147/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 45.80.229.131/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 27.79.0.86/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 116.110.211.101/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 27.79.3.81/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 80.94.92.55/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 80.94.92.179/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 54.38.98.104/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 27.79.42.39/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 171.243.148.248/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 92.118.39.14/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 94.154.43.239/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 92.241.18.101/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 27.79.4.54/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 171.231.190.224/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 27.79.40.255/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 222.88.163.204/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 81.230.170.250/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 154.90.70.254/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 8.130.50.191/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 82.33.176.32/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 223.84.199.51/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 27.79.7.248/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 27.79.2.33/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 121.160.98.65/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 77.90.185.20/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 50.114.172.201/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 118.26.111.107/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 113.56.35.44/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 61.19.69.203/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 91.92.40.231/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 39.171.252.186/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 116.110.159.126/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 195.93.244.97/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 171.243.148.107/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 41.93.28.4/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 104.223.33.137/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 92.118.39.50/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 2.57.122.209/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 171.231.183.83/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 116.110.209.240/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 87.183.48.164/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 31.77.145.225/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 116.110.1.127/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 171.231.177.96/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 116.110.150.48/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 171.231.177.205/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 27.79.43.34/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 106.75.224.165/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 80.249.151.39/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 101.96.200.56/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 171.243.150.247/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 171.243.151.230/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 171.231.197.235/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 171.231.197.233/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 195.178.110.217/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 220.205.123.186/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 120.48.22.91/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 71.206.190.209/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 58.250.107.111/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 171.231.184.135/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 27.79.5.114/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 171.231.187.95/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 116.99.168.232/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 218.145.181.48/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 185.65.202.199/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 116.110.218.214/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 116.110.145.68/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 185.70.109.79/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 87.107.109.95/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 216.57.110.81/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 92.118.39.49/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 213.100.219.9/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 65.49.139.223/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 116.110.153.197/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 116.110.149.111/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 116.110.155.201/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 129.212.188.23/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 96.44.168.88/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 95.38.233.40/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 92.4.76.12/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 92.118.39.77/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 92.118.39.71/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 91.92.40.8/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 91.92.40.6/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 91.92.40.5/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 91.92.40.4/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 91.92.40.237/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 91.92.40.233/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 91.92.40.204/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 91.92.40.176/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 91.92.40.13/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 91.92.40.12/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 91.92.40.11/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 91.92.40.10/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 80.94.92.234/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 80.94.92.186/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 80.94.92.178/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 80.225.238.77/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 78.73.8.212/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 72.48.30.6/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 64.226.126.224/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 36.103.204.54/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 34.178.21.247/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 27.79.7.135/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 27.79.6.157/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 27.79.44.157/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 27.79.44.149/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 27.79.42.0/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 27.79.3.36/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 27.79.2.32/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 27.79.1.26/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 27.155.92.28/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 23.134.76.12/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 221.151.84.6/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 217.18.94.226/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 217.160.162.192/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 203.56.201.183/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 202.69.169.162/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 202.44.237.238/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 200.71.154.142/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 2.57.122.238/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 2.57.122.168/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 2.57.122.150/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 197.248.15.98/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 195.178.110.26/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 195.178.110.232/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 195.178.110.228/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 195.178.110.227/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 193.32.162.84/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 193.200.149.230/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 188.254.76.32/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 182.19.35.57/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 176.65.139.181/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 171.231.195.144/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 171.231.190.94/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 171.231.178.206/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 161.129.211.56/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 160.250.133.77/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 151.177.151.200/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 144.2.91.96/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 121.227.153.123/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 120.48.84.44/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 116.99.173.255/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 116.99.168.247/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 116.110.18.126/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 116.110.151.131/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 116.110.149.136/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 116.110.146.239/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 116.110.146.114/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 115.190.161.6/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 115.140.161.61/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 112.167.99.220/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 111.52.249.29/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 101.47.15.119/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 101.36.104.242/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -j RETURN
-A ufw-after-input -p udp -m udp --dport 137 -j ufw-skip-to-policy-input
-A ufw-after-input -p udp -m udp --dport 138 -j ufw-skip-to-policy-input
-A ufw-after-input -p tcp -m tcp --dport 139 -j ufw-skip-to-policy-input
-A ufw-after-input -p tcp -m tcp --dport 445 -j ufw-skip-to-policy-input
-A ufw-after-input -p udp -m udp --dport 67 -j ufw-skip-to-policy-input
-A ufw-after-input -p udp -m udp --dport 68 -j ufw-skip-to-policy-input
-A ufw-after-input -m addrtype --dst-type BROADCAST -j ufw-skip-to-policy-input
-A ufw-after-logging-forward -m limit --limit 3/min --limit-burst 10 -j LOG --log-prefix "[UFW BLOCK] "
-A ufw-after-logging-input -m limit --limit 3/min --limit-burst 10 -j LOG --log-prefix "[UFW BLOCK] "
-A ufw-before-forward -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A ufw-before-forward -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A ufw-before-forward -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A ufw-before-forward -p icmp -m icmp --icmp-type 12 -j ACCEPT
-A ufw-before-forward -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A ufw-before-forward -j ufw-user-forward
-A ufw-before-forward -j ufw-user-forward
-A ufw-before-input -i lo -j ACCEPT
-A ufw-before-input -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A ufw-before-input -m conntrack --ctstate INVALID -j ufw-logging-deny
-A ufw-before-input -m conntrack --ctstate INVALID -j DROP
-A ufw-before-input -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A ufw-before-input -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A ufw-before-input -p icmp -m icmp --icmp-type 12 -j ACCEPT
-A ufw-before-input -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A ufw-before-input -p udp -m udp --sport 67 --dport 68 -j ACCEPT
-A ufw-before-input -j ufw-not-local
-A ufw-before-input -d 224.0.0.251/32 -p udp -m udp --dport 5353 -j ACCEPT
-A ufw-before-input -d 239.255.255.250/32 -p udp -m udp --dport 1900 -j ACCEPT
-A ufw-before-input -j ufw-user-input
-A ufw-before-input -j ufw-user-input
-A ufw-before-output -o lo -j ACCEPT
-A ufw-before-output -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A ufw-before-output -j ufw-user-output
-A ufw-before-output -j ufw-user-output
-A ufw-logging-allow -m limit --limit 3/min --limit-burst 10 -j LOG --log-prefix "[UFW ALLOW] "
-A ufw-logging-deny -m conntrack --ctstate INVALID -m limit --limit 3/min --limit-burst 10 -j RETURN
-A ufw-logging-deny -m limit --limit 3/min --limit-burst 10 -j LOG --log-prefix "[UFW BLOCK] "
-A ufw-not-local -m addrtype --dst-type LOCAL -j RETURN
-A ufw-not-local -m addrtype --dst-type MULTICAST -j RETURN
-A ufw-not-local -m addrtype --dst-type BROADCAST -j RETURN
-A ufw-not-local -m limit --limit 3/min --limit-burst 10 -j ufw-logging-deny
-A ufw-not-local -j DROP
-A ufw-skip-to-policy-forward -j DROP
-A ufw-skip-to-policy-input -j DROP
-A ufw-skip-to-policy-output -j ACCEPT
-A ufw-track-output -p tcp -m conntrack --ctstate NEW -j ACCEPT
-A ufw-track-output -p udp -m conntrack --ctstate NEW -j ACCEPT
-A ufw-user-input -p tcp -m tcp --dport 22 -j ACCEPT
-A ufw-user-input -p tcp -m tcp --dport 80 -j ACCEPT
-A ufw-user-input -p tcp -m tcp --dport 443 -j ACCEPT
-A ufw-user-input -p tcp -m tcp --dport 10000 -j ACCEPT
-A ufw-user-input -p tcp -m tcp --dport 5178 -j ACCEPT
-A ufw-user-input -p tcp -m tcp --dport 3015 -j ACCEPT
-A ufw-user-input -p tcp -m tcp --dport 3055 -j ACCEPT
-A ufw-user-limit -m limit --limit 3/min -j LOG --log-prefix "[UFW LIMIT BLOCK] "
-A ufw-user-limit -j REJECT --reject-with icmp-port-unreachable
-A ufw-user-limit-accept -j ACCEPT
COMMIT
# Completed on Wed Aug 26 15:46:50 2026
# Generated by iptables-save v1.8.7 on Wed Aug 26 15:46:50 2026
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.19.0.0/16 ! -o br-5a129664ca40 -j MASQUERADE
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 172.18.0.0/16 ! -o br-9305cb2c4302 -j MASQUERADE
-A DOCKER ! -i br-9305cb2c4302 -p tcp -m tcp --dport 8000 -j DNAT --to-destination 172.18.0.3:8000
-A DOCKER ! -i br-9305cb2c4302 -p tcp -m tcp --dport 27017 -j DNAT --to-destination 172.18.0.4:27017
COMMIT
# Completed on Wed Aug 26 15:46:50 2026
